--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;500&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Kanit', sans-serif;
+}
+
 img {
     width: 300px;
     height: 180px;
+}
+
+.heading {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.recipes {
+    display: flex;
+}
+
+.recipes ul {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    gap: 20px;
+}
+
+.recipes ul li{
+    display: inline;
 }
